--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "sweetalert2": "^11.26.17",
     "zod": "^4.3.5"
   },
   "devDependencies": {
