--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,20 +1,20 @@
 FROM richarvey/nginx-php-fpm:3.1.6
 
+WORKDIR /var/www/html
+
 COPY . .
 
-# Image config
-ENV SKIP_COMPOSER 1
-ENV WEBROOT /var/www/html/public
-ENV PHP_ERRORS_STDERR 1
-ENV RUN_SCRIPTS 1
-ENV REAL_IP_HEADER 1
+# Install dependencies
+RUN composer install --no-dev --optimize-autoloader
 
-# Laravel config
+# Laravel optimizations
+RUN php artisan config:cache
+RUN php artisan route:cache
+RUN php artisan view:cache
+
+ENV WEBROOT /var/www/html/public
 ENV APP_ENV production
 ENV APP_DEBUG false
 ENV LOG_CHANNEL stderr
-
-# Allow composer to run as root
-ENV COMPOSER_ALLOW_SUPERUSER 1
 
 CMD ["/start.sh"]
